# ticketing/src/altair/app/ticketing/cart_api/api_docs/swagger.json
@@ -615,6 +615,12 @@
                 },
                 "event_limit": {
                     "type": "integer"
+                },
+                "middle_stock_threshold": {
+                    "type": "integer"
+                },
+                "middle_stock_threshold_percent": {
+                    "type": "integer"
                 }
             }
         },
